--- a/Fitness Tracker/packages.config
+++ b/Fitness Tracker/packages.config
@@ -3,27 +3,37 @@
   <package id="BouncyCastle.Cryptography" version="2.3.1" targetFramework="net48" />
   <package id="Google.Protobuf" version="3.26.1" targetFramework="net48" />
   <package id="Guna.UI2.WinForms" version="2.0.4.6" targetFramework="net48" />
-  <package id="HarfBuzzSharp" version="7.3.0.2" targetFramework="net48" />
-  <package id="HarfBuzzSharp.NativeAssets.macOS" version="7.3.0.2" targetFramework="net48" />
-  <package id="HarfBuzzSharp.NativeAssets.Win32" version="7.3.0.2" targetFramework="net48" />
+  <package id="HarfBuzzSharp" version="7.3.0.3" targetFramework="net48" />
+  <package id="HarfBuzzSharp.NativeAssets.Linux" version="7.3.0.3" targetFramework="net48" />
+  <package id="HarfBuzzSharp.NativeAssets.macOS" version="7.3.0.3" targetFramework="net48" />
+  <package id="HarfBuzzSharp.NativeAssets.Win32" version="7.3.0.3" targetFramework="net48" />
   <package id="K4os.Compression.LZ4" version="1.3.8" targetFramework="net48" />
   <package id="K4os.Compression.LZ4.Streams" version="1.3.8" targetFramework="net48" />
   <package id="K4os.Hash.xxHash" version="1.0.8" targetFramework="net48" />
   <package id="Konscious.Security.Cryptography.Argon2" version="1.3.1" targetFramework="net48" />
   <package id="Konscious.Security.Cryptography.Blake2" version="1.1.1" targetFramework="net48" />
+  <package id="LiveCharts" version="0.9.7" targetFramework="net48" />
+  <package id="LiveCharts.WinForms" version="0.9.7.1" targetFramework="net48" />
+  <package id="LiveCharts.Wpf" version="0.9.7" targetFramework="net48" />
   <package id="LiveChartsCore" version="2.0.0-rc4.5" targetFramework="net48" />
-  <package id="LiveChartsCore.SkiaSharpView" version="2.0.0-rc4.5" targetFramework="net48" />
-  <package id="LiveChartsCore.SkiaSharpView.WinForms" version="2.0.0-rc4.5" targetFramework="net48" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="8.0.0" targetFramework="net48" />
+  <package id="Microsoft.NETFramework.ReferenceAssemblies" version="1.0.2" targetFramework="net48" developmentDependency="true" />
+  <package id="Microsoft.NETFramework.ReferenceAssemblies.net48" version="1.0.2" targetFramework="net48" developmentDependency="true" />
   <package id="MySql.Data" version="9.1.0" targetFramework="net48" />
-  <package id="OpenTK" version="3.1.0" targetFramework="net48" />
+  <package id="NPlot" version="0.9.10.0" targetFramework="net48" />
+  <package id="OpenTK" version="3.3.1" targetFramework="net48" />
   <package id="OpenTK.GLControl" version="3.1.0" targetFramework="net48" />
-  <package id="SkiaSharp" version="3.0.0-preview.4.1" targetFramework="net48" />
-  <package id="SkiaSharp.HarfBuzz" version="2.88.8" targetFramework="net48" />
-  <package id="SkiaSharp.NativeAssets.macOS" version="3.0.0-preview.4.1" targetFramework="net48" />
-  <package id="SkiaSharp.NativeAssets.Win32" version="3.0.0-preview.4.1" targetFramework="net48" />
+  <package id="OpenTK.GLWpfControl" version="3.3.0" targetFramework="net48" />
+  <package id="OxyPlot.Core" version="2.2.0" targetFramework="net48" />
+  <package id="PDFsharp" version="1.50.5147" targetFramework="net48" />
+  <package id="SkiaSharp" version="3.116.1" targetFramework="net48" />
+  <package id="SkiaSharp.HarfBuzz" version="2.88.9" targetFramework="net48" />
+  <package id="SkiaSharp.NativeAssets.Linux.NoDependencies" version="2.88.9" targetFramework="net48" />
+  <package id="SkiaSharp.NativeAssets.macOS" version="3.116.1" targetFramework="net48" />
+  <package id="SkiaSharp.NativeAssets.Win32" version="3.116.1" targetFramework="net48" />
   <package id="SkiaSharp.Views.Desktop.Common" version="3.0.0-preview.4.1" targetFramework="net48" />
   <package id="SkiaSharp.Views.WindowsForms" version="3.0.0-preview.4.1" targetFramework="net48" />
+  <package id="SkiaSharp.Views.WPF" version="3.0.0-preview.4.1" targetFramework="net48" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
   <package id="System.Configuration.ConfigurationManager" version="8.0.0" targetFramework="net48" />
   <package id="System.Diagnostics.DiagnosticSource" version="8.0.1" targetFramework="net48" />
