--- a/Fitness Tracker/packages.config
+++ b/Fitness Tracker/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="BouncyCastle.Cryptography" version="2.3.1" targetFramework="net48" />
   <package id="Google.Protobuf" version="3.26.1" targetFramework="net48" />
+  <package id="Guna.Charts.WinForms" version="1.1.0" targetFramework="net48" />
   <package id="Guna.UI2.WinForms" version="2.0.4.6" targetFramework="net48" />
   <package id="HarfBuzzSharp" version="7.3.0.3" targetFramework="net48" />
   <package id="HarfBuzzSharp.NativeAssets.Linux" version="7.3.0.3" targetFramework="net48" />
