--- a/Fitness Tracker/Fitness Tracker.csproj
+++ b/Fitness Tracker/Fitness Tracker.csproj
@@ -171,13 +171,15 @@
     <Compile Include="Entities\Activity.cs" />
     <Compile Include="Entities\GoalTracking.cs" />
     <Compile Include="Entities\Metric.cs" />
-    <Compile Include="Entities\MetricValue.cs" />
+    <Compile Include="Entities\MetricValues.cs" />
     <Compile Include="Entities\MetValues.cs" />
     <Compile Include="Entities\Person.cs" />
     <Compile Include="Entities\Record.cs" />
     <Compile Include="Entities\Schedule.cs" />
     <Compile Include="Entities\ScheduleActivity.cs" />
+    <Compile Include="Entities\User.cs" />
     <Compile Include="Entities\UserRecord.cs" />
+    <Compile Include="Entities\WeightTracking.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utilities\PasswordHelper.cs" />
